[gd_scene load_steps=10 format=2]

[ext_resource path="res://tipos/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cartas/carta/carta_base_leyenda.png" type="Texture" id=2]
[ext_resource path="res://cartas/carta/carta.gd" type="Script" id=3]
[ext_resource path="res://cartas/carta/carta_base.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=5]
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 1 )

[node name="carta" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -828.0
margin_bottom = -37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 0.65098, 0.592157, 0.356863, 1 )
margin_right = 452.0
margin_bottom = 683.0
texture = ExtResource( 4 )
region_rect = Rect2( -0.259644, -4.11143, 696.512, 980.901 )
patch_margin_left = 67
patch_margin_top = 70
patch_margin_right = 69
patch_margin_bottom = 79

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 452.0
margin_bottom = 683.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TituloCarta" type="Label" parent="VBoxContainer"]
margin_right = 452.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 4 )
align = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 452.0
margin_bottom = 488.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 452.0
margin_bottom = 683.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 442.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 104
patch_margin_top = 70
patch_margin_right = 102
patch_margin_bottom = 101
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 442.0
margin_bottom = 181.0
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10

[node name="LeyendaCarta" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 452.0
margin_bottom = 20.0
size_flags_vertical = 0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
